# MacWinControl

./: .gitignore  README.md  demo.css  start-macwincontrol.bat
MacApp/: MacWinControl.spec  MacWinControlApp.py  Package.swift  app_v2.py  bridge.py  bridge2.py  bridge3.py  clipboard_manager.py  gui_app.py  macwincontrol.py  macwincontrol_gui.py  screen_layout_widget.py  setup.py  simple_server.py
MacApp/MacWinControl/: Info.plist  MacWinControlApp.swift
MacApp/MacWinControl.app/Contents/: Info.plist
MacApp/MacWinControl.xcodeproj/: project.pbxproj
MacApp/MacWinControl/Managers/: EventCapture.swift  ScreenManager.swift
MacApp/MacWinControl/Models/: ConnectionState.swift  InputEvent.swift
MacApp/MacWinControl/Network/: NetworkServer.swift
MacApp/MacWinControl/Views/: ContentView.swift
Protocol/: protocol.md
RustApp/: Start-MacWinControl.bat  launcher.ps1  package-lock.json  package.json
RustApp/src/: index.html  main.js  styles.css
RustApp/src-tauri/: Cargo.toml  tauri.conf.json
RustApp/src-tauri/icons/: icon.icns
RustApp/src-tauri/src/: clipboard_sync.rs  input.rs  lib.rs  main.rs  network.rs
SharedFiles/: README.md
WindowsApp/: WindowsApp.sln
WindowsApp/MacWinControlClient/: App.xaml  App.xaml.cs  BridgeController.cs  ClipboardManager.cs  EdgeDetector.cs  InputHookManager.cs  MacWinControlClient.csproj  MainWindow.xaml  MainWindow.xaml.cs  MainWindow_v2.xaml  MainWindow_v2.xaml.cs  Protocol.cs
WindowsApp/MacWinControlClient/Input/: InputInjector.cs  NativeInput.cs
shared/: design_system.py  protocol.py
(+6 files in other folders)
