[package]
name = "macwincontrol"
version = "1.0.0"
description = "Share mouse and keyboard between Mac and Windows"
authors = ["Frank"]
edition = "2021"

[lib]
name = "macwincontrol_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.6"
arboard = "3"  # Cross-platform clipboard
lazy_static = "1.4"
hostname = "0.4"
once_cell = "1.19"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging", 
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi"
] }

